blue-green-app/blue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  selector:
    app: blue-green-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
